project/CParser.py
# Generated from C.g4 by ANTLR 4.6
# encoding: utf-8
from antlr4 import *
from io import StringIO



class CParser ( Parser ):

    grammarFileName = "C.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'('", "')'", "'{'", "'}'", "'new'", 
                     "'||'", "'&&'", "','", "'['", "']'", "<INVALID>", "'$'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'global'", 
                     "'void'", "'char'", "'int'", "'float'", "'bool'", "'if'", 
                     "'else'", "'return'", "'while'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "Include", "Pointer", "UnOp", "AssignementOperator", 
                      "EqualOperator", "RelationOperator", "MultOperator", 
                      "AddOperator", "Type", "Modifier", "Void", "Char", 
                      "Int", "Float", "Bool", "If", "Else", "Return", "While", 
                      "IntConstant", "FloatConstant", "CharacterConstant", 
                      "Identifier", "Whitespace", "Newline", "BlockComment", 
                      "LineComment" ]

    RULE_program = 0
    RULE_includes = 1
    RULE_statements = 2
    RULE_statement = 3
    RULE_ifstatement = 4
    RULE_elsestatement = 5
    RULE_whilestatement = 6
    RULE_function = 7
    RULE_expression = 8
    RULE_orCondition = 9
    RULE_andCondition = 10
    RULE_equalCondition = 11
    RULE_relationCondition = 12
    RULE_addCondition = 13
    RULE_multCondition = 14
    RULE_finalCondition = 15
    RULE_finalConditioner = 16
    RULE_parameterlist = 17
    RULE_parameter = 18
    RULE_typeDecl = 19
    RULE_array = 20
    RULE_constant = 21

    ruleNames =  [ "program", "includes", "statements", "statement", "ifstatement", 
                   "elsestatement", "whilestatement", "function", "expression", 
                   "orCondition", "andCondition", "equalCondition", "relationCondition", 
                   "addCondition", "multCondition", "finalCondition", "finalConditioner", 
                   "parameterlist", "parameter", "typeDecl", "array", "constant" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    Include=12
    Pointer=13
    UnOp=14
    AssignementOperator=15
    EqualOperator=16
    RelationOperator=17
    MultOperator=18
    AddOperator=19
    Type=20
    Modifier=21
    Void=22
    Char=23
    Int=24
    Float=25
    Bool=26
    If=27
    Else=28
    Return=29
    While=30
    IntConstant=31
    FloatConstant=32
    CharacterConstant=33
    Identifier=34
    Whitespace=35
    Newline=36
    BlockComment=37
    LineComment=38

    def __init__(self, input:TokenStream):
        super().__init__(input)
        self.checkVersion("4.6")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def includes(self):
            return self.getTypedRuleContext(CParser.IncludesContext,0)


        def statements(self):
            return self.getTypedRuleContext(CParser.StatementsContext,0)


        def EOF(self):
            return self.getToken(CParser.EOF, 0)

        def getRuleIndex(self):
            return CParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = CParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            self.includes()
            self.state = 45
            self.statements()
            self.state = 46
            self.match(CParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IncludesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Include(self):
            return self.getToken(CParser.Include, 0)

        def includes(self):
            return self.getTypedRuleContext(CParser.IncludesContext,0)


        def getRuleIndex(self):
            return CParser.RULE_includes

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIncludes" ):
                listener.enterIncludes(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIncludes" ):
                listener.exitIncludes(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIncludes" ):
                return visitor.visitIncludes(self)
            else:
                return visitor.visitChildren(self)




    def includes(self):

        localctx = CParser.IncludesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_includes)
        try:
            self.state = 51
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CParser.Include]:
                self.enterOuterAlt(localctx, 1)
                self.state = 48
                self.match(CParser.Include)
                self.state = 49
                self.includes()
                pass
            elif token in [CParser.EOF, CParser.T__1, CParser.T__5, CParser.Pointer, CParser.UnOp, CParser.Type, CParser.Modifier, CParser.If, CParser.Return, CParser.While, CParser.IntConstant, CParser.FloatConstant, CParser.CharacterConstant, CParser.Identifier]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self):
            return self.getTypedRuleContext(CParser.StatementContext,0)


        def statements(self):
            return self.getTypedRuleContext(CParser.StatementsContext,0)


        def ifstatement(self):
            return self.getTypedRuleContext(CParser.IfstatementContext,0)


        def whilestatement(self):
            return self.getTypedRuleContext(CParser.WhilestatementContext,0)


        def function(self):
            return self.getTypedRuleContext(CParser.FunctionContext,0)


        def getRuleIndex(self):
            return CParser.RULE_statements

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatements" ):
                listener.enterStatements(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatements" ):
                listener.exitStatements(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatements" ):
                return visitor.visitStatements(self)
            else:
                return visitor.visitChildren(self)




    def statements(self):

        localctx = CParser.StatementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_statements)
        try:
            self.state = 66
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 53
                self.statement()
                self.state = 54
                self.statements()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 56
                self.ifstatement()
                self.state = 57
                self.statements()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 59
                self.whilestatement()
                self.state = 60
                self.statements()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 62
                self.function()
                self.state = 63
                self.statements()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return CParser.RULE_statement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class VarDeclarationContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def typeDecl(self):
            return self.getTypedRuleContext(CParser.TypeDeclContext,0)

        def Identifier(self):
            return self.getToken(CParser.Identifier, 0)
        def array(self):
            return self.getTypedRuleContext(CParser.ArrayContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDeclaration" ):
                listener.enterVarDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDeclaration" ):
                listener.exitVarDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDeclaration" ):
                return visitor.visitVarDeclaration(self)
            else:
                return visitor.visitChildren(self)


    class ReturnContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Return(self):
            return self.getToken(CParser.Return, 0)
        def expression(self):
            return self.getTypedRuleContext(CParser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturn" ):
                listener.enterReturn(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturn" ):
                listener.exitReturn(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturn" ):
                return visitor.visitReturn(self)
            else:
                return visitor.visitChildren(self)


    class FunDeclarationContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def typeDecl(self):
            return self.getTypedRuleContext(CParser.TypeDeclContext,0)

        def Identifier(self):
            return self.getToken(CParser.Identifier, 0)
        def parameterlist(self):
            return self.getTypedRuleContext(CParser.ParameterlistContext,0)

        def array(self):
            return self.getTypedRuleContext(CParser.ArrayContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunDeclaration" ):
                listener.enterFunDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunDeclaration" ):
                listener.exitFunDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunDeclaration" ):
                return visitor.visitFunDeclaration(self)
            else:
                return visitor.visitChildren(self)


    class DefinitionContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Identifier(self):
            return self.getToken(CParser.Identifier, 0)
        def AssignementOperator(self):
            return self.getToken(CParser.AssignementOperator, 0)
        def expression(self):
            return self.getTypedRuleContext(CParser.ExpressionContext,0)

        def typeDecl(self):
            return self.getTypedRuleContext(CParser.TypeDeclContext,0)

        def Pointer(self):
            return self.getToken(CParser.Pointer, 0)
        def array(self):
            return self.getTypedRuleContext(CParser.ArrayContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefinition" ):
                listener.enterDefinition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefinition" ):
                listener.exitDefinition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDefinition" ):
                return visitor.visitDefinition(self)
            else:
                return visitor.visitChildren(self)


    class CalculationContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(CParser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCalculation" ):
                listener.enterCalculation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCalculation" ):
                listener.exitCalculation(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCalculation" ):
                return visitor.visitCalculation(self)
            else:
                return visitor.visitChildren(self)



    def statement(self):

        localctx = CParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_statement)
        self._la = 0 # Token type
        try:
            self.state = 105
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                localctx = CParser.VarDeclarationContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 68
                self.typeDecl()
                self.state = 69
                self.match(CParser.Identifier)
                self.state = 71
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==CParser.T__9:
                    self.state = 70
                    self.array()


                self.state = 73
                self.match(CParser.T__0)
                pass

            elif la_ == 2:
                localctx = CParser.FunDeclarationContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 75
                self.typeDecl()
                self.state = 76
                self.match(CParser.Identifier)
                self.state = 78
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==CParser.T__9:
                    self.state = 77
                    self.array()


                self.state = 80
                self.match(CParser.T__1)
                self.state = 81
                self.parameterlist()
                self.state = 82
                self.match(CParser.T__2)
                self.state = 83
                self.match(CParser.T__0)
                pass

            elif la_ == 3:
                localctx = CParser.DefinitionContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 87
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [CParser.Type, CParser.Modifier]:
                    self.state = 85
                    self.typeDecl()
                    pass
                elif token in [CParser.Pointer]:
                    self.state = 86
                    self.match(CParser.Pointer)
                    pass
                elif token in [CParser.Identifier]:
                    pass
                else:
                    raise NoViableAltException(self)
                self.state = 89
                self.match(CParser.Identifier)
                self.state = 91
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
                if la_ == 1+1:
                    self.state = 90
                    self.array()


                self.state = 93
                self.match(CParser.AssignementOperator)
                self.state = 94
                self.expression()
                self.state = 95
                self.match(CParser.T__0)
                pass

            elif la_ == 4:
                localctx = CParser.CalculationContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 97
                self.expression()
                self.state = 98
                self.match(CParser.T__0)
                pass

            elif la_ == 5:
                localctx = CParser.ReturnContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 100
                self.match(CParser.Return)
                self.state = 102
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CParser.T__1) | (1 << CParser.T__5) | (1 << CParser.UnOp) | (1 << CParser.IntConstant) | (1 << CParser.FloatConstant) | (1 << CParser.CharacterConstant) | (1 << CParser.Identifier))) != 0):
                    self.state = 101
                    self.expression()


                self.state = 104
                self.match(CParser.T__0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IfstatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def If(self):
            return self.getToken(CParser.If, 0)

        def expression(self):
            return self.getTypedRuleContext(CParser.ExpressionContext,0)


        def statements(self):
            return self.getTypedRuleContext(CParser.StatementsContext,0)


        def elsestatement(self):
            return self.getTypedRuleContext(CParser.ElsestatementContext,0)


        def statement(self):
            return self.getTypedRuleContext(CParser.StatementContext,0)


        def getRuleIndex(self):
            return CParser.RULE_ifstatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfstatement" ):
                listener.enterIfstatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfstatement" ):
                listener.exitIfstatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfstatement" ):
                return visitor.visitIfstatement(self)
            else:
                return visitor.visitChildren(self)




    def ifstatement(self):

        localctx = CParser.IfstatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_ifstatement)
        self._la = 0 # Token type
        try:
            self.state = 125
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 107
                self.match(CParser.If)
                self.state = 108
                self.match(CParser.T__1)
                self.state = 109
                self.expression()
                self.state = 110
                self.match(CParser.T__2)
                self.state = 111
                self.match(CParser.T__3)
                self.state = 112
                self.statements()
                self.state = 113
                self.match(CParser.T__4)
                self.state = 115
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==CParser.Else:
                    self.state = 114
                    self.elsestatement()


                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 117
                self.match(CParser.If)
                self.state = 118
                self.match(CParser.T__1)
                self.state = 119
                self.expression()
                self.state = 120
                self.match(CParser.T__2)
                self.state = 121
                self.statement()
                self.state = 123
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==CParser.Else:
                    self.state = 122
                    self.elsestatement()


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ElsestatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Else(self):
            return self.getToken(CParser.Else, 0)

        def statements(self):
            return self.getTypedRuleContext(CParser.StatementsContext,0)


        def statement(self):
            return self.getTypedRuleContext(CParser.StatementContext,0)


        def getRuleIndex(self):
            return CParser.RULE_elsestatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElsestatement" ):
                listener.enterElsestatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElsestatement" ):
                listener.exitElsestatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElsestatement" ):
                return visitor.visitElsestatement(self)
            else:
                return visitor.visitChildren(self)




    def elsestatement(self):

        localctx = CParser.ElsestatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_elsestatement)
        try:
            self.state = 134
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 127
                self.match(CParser.Else)
                self.state = 128
                self.match(CParser.T__3)
                self.state = 129
                self.statements()
                self.state = 130
                self.match(CParser.T__4)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 132
                self.match(CParser.Else)
                self.state = 133
                self.statement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class WhilestatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def While(self):
            return self.getToken(CParser.While, 0)

        def expression(self):
            return self.getTypedRuleContext(CParser.ExpressionContext,0)


        def statements(self):
            return self.getTypedRuleContext(CParser.StatementsContext,0)


        def statement(self):
            return self.getTypedRuleContext(CParser.StatementContext,0)


        def getRuleIndex(self):
            return CParser.RULE_whilestatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhilestatement" ):
                listener.enterWhilestatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhilestatement" ):
                listener.exitWhilestatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhilestatement" ):
                return visitor.visitWhilestatement(self)
            else:
                return visitor.visitChildren(self)




    def whilestatement(self):

        localctx = CParser.WhilestatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_whilestatement)
        try:
            self.state = 150
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 136
                self.match(CParser.While)
                self.state = 137
                self.match(CParser.T__1)
                self.state = 138
                self.expression()
                self.state = 139
                self.match(CParser.T__2)
                self.state = 140
                self.match(CParser.T__3)
                self.state = 141
                self.statements()
                self.state = 142
                self.match(CParser.T__4)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 144
                self.match(CParser.While)
                self.state = 145
                self.match(CParser.T__1)
                self.state = 146
                self.expression()
                self.state = 147
                self.match(CParser.T__2)
                self.state = 148
                self.statement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FunctionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(CParser.Identifier, 0)

        def parameterlist(self):
            return self.getTypedRuleContext(CParser.ParameterlistContext,0)


        def statements(self):
            return self.getTypedRuleContext(CParser.StatementsContext,0)


        def typeDecl(self):
            return self.getTypedRuleContext(CParser.TypeDeclContext,0)


        def statement(self):
            return self.getTypedRuleContext(CParser.StatementContext,0)


        def getRuleIndex(self):
            return CParser.RULE_function

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction" ):
                listener.enterFunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction" ):
                listener.exitFunction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction" ):
                return visitor.visitFunction(self)
            else:
                return visitor.visitChildren(self)




    def function(self):

        localctx = CParser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_function)
        self._la = 0 # Token type
        try:
            self.state = 172
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,15,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 153
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==CParser.Type or _la==CParser.Modifier:
                    self.state = 152
                    self.typeDecl()


                self.state = 155
                self.match(CParser.Identifier)
                self.state = 156
                self.match(CParser.T__1)
                self.state = 157
                self.parameterlist()
                self.state = 158
                self.match(CParser.T__2)
                self.state = 159
                self.match(CParser.T__3)
                self.state = 160
                self.statements()
                self.state = 161
                self.match(CParser.T__4)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 164
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==CParser.Type or _la==CParser.Modifier:
                    self.state = 163
                    self.typeDecl()


                self.state = 166
                self.match(CParser.Identifier)
                self.state = 167
                self.match(CParser.T__1)
                self.state = 168
                self.parameterlist()
                self.state = 169
                self.match(CParser.T__2)
                self.state = 170
                self.statement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def orCondition(self):
            return self.getTypedRuleContext(CParser.OrConditionContext,0)


        def typeDecl(self):
            return self.getTypedRuleContext(CParser.TypeDeclContext,0)


        def getRuleIndex(self):
            return CParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression" ):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)




    def expression(self):

        localctx = CParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_expression)
        try:
            self.state = 177
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CParser.T__1, CParser.UnOp, CParser.IntConstant, CParser.FloatConstant, CParser.CharacterConstant, CParser.Identifier]:
                self.enterOuterAlt(localctx, 1)
                self.state = 174
                self.orCondition(0)
                pass
            elif token in [CParser.T__5]:
                self.enterOuterAlt(localctx, 2)
                self.state = 175
                self.match(CParser.T__5)
                self.state = 176
                self.typeDecl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class OrConditionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def andCondition(self):
            return self.getTypedRuleContext(CParser.AndConditionContext,0)


        def orCondition(self):
            return self.getTypedRuleContext(CParser.OrConditionContext,0)


        def getRuleIndex(self):
            return CParser.RULE_orCondition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOrCondition" ):
                listener.enterOrCondition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOrCondition" ):
                listener.exitOrCondition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOrCondition" ):
                return visitor.visitOrCondition(self)
            else:
                return visitor.visitChildren(self)


